--- a/diabetes_risk_assessment.ipynb
+++ b/diabetes_risk_assessment.ipynb
@@ -391,7 +391,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Step 4.  Model Selection\n",
+        "## Step 4.  Feature Engineering\n",
         "[Feature Engineering](https://elitedatascience.com/feature-engineering-best-practices) is the process of transforming the gathered data into features that better represent the problem that we are trying to solve to the model, to improve its performance and accuracy.\n",
         "Feature Engineering enables to highlight the **important features** and facilitate to bring **domain expertise** on the problem to the table. It also allows to **avoid overfitting the model** despite providing many input features\n",
         "\n",
